--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
+alembic==0.6.2
+blinker==1.3
 Flask==0.10.1
 Flask-Bootstrap==3.0.3.1
 Flask-Login==0.2.7
 Flask-Mail==0.9.0
 Flask-Migrate==1.1.0
 Flask-Moment==0.2.1
-Flask-SQLAlchemy==1.0
 Flask-Script==0.6.6
+Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
+httplib2==0.9.1
+itsdangerous==0.23
 Jinja2==2.7.1
 Mako==0.9.1
 MarkupSafe==0.18
+pytz==2015.4
+six==1.9.0
 SQLAlchemy==0.9.9
-WTForms==1.0.5
+twilio==4.4.0
 Werkzeug==0.10.4
-alembic==0.6.2
-blinker==1.3
-itsdangerous==0.23
+wheel==0.24.0
+WTForms==1.0.5
