--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Moment==0.2.1
 Flask-Script==0.6.6
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
+honcho==0.6.6
 httplib2==0.9.1
 itsdangerous==0.23
 Jinja2==2.7.1
