--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,14 @@ Flask-Moment==0.2.1
 Flask-Script==0.6.6
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
+gunicorn==19.3.0
 honcho==0.6.6
 httplib2==0.9.1
 itsdangerous==0.23
 Jinja2==2.7.1
 Mako==0.9.1
 MarkupSafe==0.18
+psycopg2==2.6.1
 pytz==2015.4
 six==1.9.0
 SQLAlchemy==0.9.9
