--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Migrate==1.1.0
 Flask-Moment==0.2.1
 Flask-Script==0.6.6
 Flask-SQLAlchemy==1.0
+Flask-SSLify==0.1.5
 Flask-WTF==0.9.4
 gunicorn==19.3.0
 honcho==0.6.6
