--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ honcho==0.6.6
 httplib2==0.9.1
 itsdangerous==0.23
 Jinja2==2.7.1
+marshmallow==2.1.1
 Mako==0.9.1
 MarkupSafe==0.18
 psycopg2==2.6.1
