--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==0.6.2
+aniso8601==1.0.0
 blinker==1.3
 Flask==0.10.1
 Flask-Bootstrap==3.0.3.1
 Flask-Login==0.2.7
 Flask-Mail==0.9.0
+flask-marshmallow==0.6.2
 Flask-Migrate==1.1.0
 Flask-Moment==0.2.1
+Flask-RESTful==0.3.4
 Flask-Script==0.6.6
 Flask-SQLAlchemy==1.0
 Flask-SSLify==0.1.5
@@ -15,9 +18,10 @@ honcho==0.6.6
 httplib2==0.9.1
 itsdangerous==0.23
 Jinja2==2.7.1
-marshmallow==2.1.1
 Mako==0.9.1
 MarkupSafe==0.18
+marshmallow==2.1.3
+marshmallow-sqlalchemy==0.6.0
 psycopg2==2.6.1
 pytz==2015.4
 six==1.9.0
